WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
71060
[Qt] Failure to build when QT_NO_CURSOR defined
https://bugs.webkit.org/show_bug.cgi?id=71060
Summary
[Qt] Failure to build when QT_NO_CURSOR defined
Helder Correia
Reported
2011-10-27 14:00:20 PDT
PlatformVideoWindowQt needs to wrap some code around #ifndef QT_NO_CURSOR in order to build QtWebKit when QT_NO_CURSOR is defined.
Attachments
Patch
(2.54 KB, patch)
2011-10-27 14:04 PDT
,
Helder Correia
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.76 KB, patch)
2011-10-27 15:55 PDT
,
Helder Correia
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Helder Correia
Comment 1
2011-10-27 14:04:25 PDT
Created
attachment 112747
[details]
Patch
Helder Correia
Comment 2
2011-10-27 15:55:27 PDT
Created
attachment 112774
[details]
Patch for landing
WebKit Review Bot
Comment 3
2011-10-27 17:50:45 PDT
Comment on
attachment 112774
[details]
Patch for landing Clearing flags on attachment: 112774 Committed
r98671
: <
http://trac.webkit.org/changeset/98671
>
WebKit Review Bot
Comment 4
2011-10-27 17:50:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug