[Qt] Failure to build when QT_NO_CURSOR defined https://bugs.webkit.org/show_bug.cgi?id=71060

Patch by Helder Correia <helder.correia@palm.com> on 2011-10-27
Reviewed by Noam Rosenthal.

PlatformVideoWindowQt needs to wrap some code around #ifndef
QT_NO_CURSOR in order to build QtWebKit when QT_NO_CURSOR is defined.

Build fix, no new tests.

* platform/graphics/gstreamer/PlatformVideoWindowQt.cpp:
(FullScreenVideoWindow::FullScreenVideoWindow):
(FullScreenVideoWindow::closeEvent):
(FullScreenVideoWindow::hideCursor):
(FullScreenVideoWindow::showCursor):

git-svn-id: svn://svn.chromium.org/blink/trunk@98671 bbb929c8-8fbe-4397-9dbb-9b2b20218538