third_party/WebKit/Source/WebCore/platform/graphics/gstreamer/PlatformVideoWindowQt.cpp
@@ -30,7 +30,9 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <QPalette>
 using namespace WebCore;
 
+#ifndef QT_NO_CURSOR
 static const int gHideMouseCursorDelay = 3000;
+#endif
 
 FullScreenVideoWindow::FullScreenVideoWindow()
     : QWidget(0, Qt::Window)
@@ -41,8 +43,10 @@ FullScreenVideoWindow::FullScreenVideoWindow()
     setAttribute(Qt::WA_NoSystemBackground, true);
     setAttribute(Qt::WA_PaintOnScreen, true);
 
+#ifndef QT_NO_CURSOR
     m_cursorTimer.setSingleShot(true);
     connect(&m_cursorTimer, SIGNAL(timeout()), this, SLOT(hideCursor()));
+#endif
 }
 
 void FullScreenVideoWindow::setVideoElement(HTMLVideoElement* element)
@@ -52,10 +56,14 @@ void FullScreenVideoWindow::setVideoElement(HTMLVideoElement* element)
 
 void FullScreenVideoWindow::closeEvent(QCloseEvent*)
 {
+#ifndef QT_NO_CURSOR
     m_cursorTimer.stop();
+#endif
     setMouseTracking(false);
     releaseMouse();
+#ifndef QT_NO_CURSOR
     QApplication::restoreOverrideCursor();
+#endif
 }
 
 void FullScreenVideoWindow::keyPressEvent(QKeyEvent* ev)
@@ -97,13 +105,17 @@ void FullScreenVideoWindow::showFullScreen()
 
 void FullScreenVideoWindow::hideCursor()
 {
+#ifndef QT_NO_CURSOR
     QApplication::setOverrideCursor(QCursor(Qt::BlankCursor));
+#endif
 }
 
 void FullScreenVideoWindow::showCursor()
 {
+#ifndef QT_NO_CURSOR
     QApplication::restoreOverrideCursor();
     m_cursorTimer.start(gHideMouseCursorDelay);
+#endif
 }
 
 
